objects/LCCLine__c/LCCLine__c.object-meta.xml
<CustomObject>
    <label>LCC Line</label>
    <nameField>
        <displayFormat>LCC-{00000}</displayFormat>
        <label>LCC Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCC Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>