objects/LCCLine__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LCC Lines</relationshipLabel>
    <relationshipName>LCC_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>