objects/LCCLine__c/fields/Amount_of_Price_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Price_Tax__c</fullName>
    <formula>Total_Amount_of_Price_Local__c  *  TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Price Tax (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>