objects/LCCLine__c/fields/Amount_of_Price_Tax_FCY1__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Price_Tax_FCY1__c</fullName>
    <formula>PRICEFCY__c * TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Price Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>