objects/LCCLine__c/fields/Amount_of_Price_Tax_FCY__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Price_Tax_FCY__c</fullName>
    <label>Amount of Price Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>