objects/LCCLine__c/fields/Amount_of_Price_Tax_Local__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Price_Tax_Local__c</fullName>
    <label>Amount of Price Tax(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>