objects/LCCLine__c/fields/Amount_of_Tax_Selling_FCY__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Tax_Selling_FCY__c</fullName>
    <formula>Tax_Rate_Selling__c * PRICEFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax-Selling for Co-Loader (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>