objects/LCCLine__c/fields/AWB_Fee_per_HAWB_MAWB__c.field-meta.xml
<CustomField>
    <fullName>AWB_Fee_per_HAWB_MAWB__c</fullName>
    <label>AWB Fee per HAWB / MAWB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>