objects/LCCLine__c/fields/Cargo_code_1__c.field-meta.xml
<CustomField>
    <fullName>Cargo_code_1__c</fullName>
    <label>Cargo code 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>