objects/LCCLine__c/fields/CCA_Fee_for_adjustment__c.field-meta.xml
<CustomField>
    <fullName>CCA_Fee_for_adjustment__c</fullName>
    <label>CCA Fee for adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>