objects/LCCLine__c/fields/Charge_in__c.field-meta.xml
<CustomField>
    <fullName>Charge_in__c</fullName>
    <label>Charge in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Origin</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>