objects/LCCLine__c/fields/Charge_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Charge_Quantity__c</fullName>
    <label>Charge Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>