objects/LCCLine__c/fields/CURRENCY__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY__c</fullName>
    <label>CURRENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Currency</valueSetName>
    </valueSet>
</CustomField>