objects/LCCLine__c/fields/Fee_acceptance_of_Dangerous_Goods__c.field-meta.xml
<CustomField>
    <fullName>Fee_acceptance_of_Dangerous_Goods__c</fullName>
    <label>Fee acceptance of Dangerous Goods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>