objects/LCCLine__c/fields/FHL_fee_per_HAWB_MAWB__c.field-meta.xml
<CustomField>
    <fullName>FHL_fee_per_HAWB_MAWB__c</fullName>
    <label>FHL fee per HAWB / MAWB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>