objects/LCCLine__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POL</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>LCC Lines</relationshipLabel>
    <relationshipName>LCC_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>