objects/LCCLine__c/fields/ICS_Fee_per_HAWB_MAWB__c.field-meta.xml
<CustomField>
    <fullName>ICS_Fee_per_HAWB_MAWB__c</fullName>
    <label>ICS Fee per HAWB / MAWB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>