objects/LCCLine__c/fields/LocalCharge__c.field-meta.xml
<CustomField>
    <fullName>LocalCharge__c</fullName>
    <label>Local Charge</label>
    <referenceTo>LocalCharge__c</referenceTo>
    <relationshipLabel>LCC Lines</relationshipLabel>
    <relationshipName>LCC_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>