objects/LCCLine__c/fields/M_Minimum_rate__c.field-meta.xml
<CustomField>
    <fullName>M_Minimum_rate__c</fullName>
    <label>M (Minimum rate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>