objects/LCCLine__c/fields/Maximum_Weight_Compartments_1__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Weight_Compartments_1__c</fullName>
    <label>Maximum Weight (Compartments) 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>