objects/LCCLine__c/fields/N_Normal_rate__c.field-meta.xml
<CustomField>
    <fullName>N_Normal_rate__c</fullName>
    <label>N (Normal rate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>