objects/LCCLine__c/fields/POL_text__c.field-meta.xml
<CustomField>
    <fullName>POL_text__c</fullName>
    <label>POL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>