objects/LCCLine__c/fields/Price_Amount_incl_Tax_FCY__c.field-meta.xml
<CustomField>
    <fullName>Price_Amount_incl_Tax_FCY__c</fullName>
    <formula>Total_Amount_of_Price_FCY__c +  Amount_of_Price_Tax_FCY1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Amount incl Tax(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>