objects/LCCLine__c/fields/Price_Amount_incl_Tax_Local__c.field-meta.xml
<CustomField>
    <fullName>Price_Amount_incl_Tax_Local__c</fullName>
    <formula>Amount_of_Price_Tax__c +  Total_Amount_of_Price_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Amount incl Tax(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>