objects/LCCLine__c/fields/PRICE_for_Guest_LOCAL__c.field-meta.xml
<CustomField>
    <fullName>PRICE_for_Guest_LOCAL__c</fullName>
    <label>PRICE for Guest (LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>