objects/LCCLine__c/fields/PRICEFCY__c.field-meta.xml
<CustomField>
    <fullName>PRICEFCY__c</fullName>
    <label>PRICE for Co-Loader (FCY)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>