objects/LCCLine__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Name</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipLabel>LCC Lines</relationshipLabel>
    <relationshipName>LCC_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>