objects/LCCLine__c/fields/Tax_Rate_Selling__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Selling__c</fullName>
    <label>Tax Rate-Selling (%)</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>