objects/LCCLine__c/fields/Total_Amount_of_Price_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Price_FCY__c</fullName>
    <label>Total Amount of Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>