objects/LCCLine__c/fields/Total_Amount_of_Price_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Price_Local__c</fullName>
    <label>Total Amount of Price (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>