objects/LCCLine__c/fields/Total_Selling_Amount_for_Guest_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Amount_for_Guest_Local__c</fullName>
    <formula>PRICE_for_Guest_LOCAL__c + Amount_Tax_Selling_for_Guest_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Amount for Guest (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>