objects/LCCLine__c/fields/X1000__c.field-meta.xml
<CustomField>
    <fullName>X1000__c</fullName>
    <label>1000</label>
    <length>18</length>
    <type>Text</type>
</CustomField>