objects/LCCLine__c/fields/X300__c.field-meta.xml
<CustomField>
    <fullName>X300__c</fullName>
    <label>300</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>