objects/LCCLine__c/fields/X_Ray_Charge_SEC_per_Kg__c.field-meta.xml
<CustomField>
    <fullName>X_Ray_Charge_SEC_per_Kg__c</fullName>
    <label>X-Ray Charge (SEC) per Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>