objects/LCCLine__c/recordTypes/LCCLineItems.recordType-meta.xml
<RecordType>
    <fullName>LCCLineItems</fullName>
    <active>true</active>
    <label>LCC Line Items</label>
</RecordType>