objects/LCCLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Field1__c</columns>
    <columns>POD__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Charge_in__c</columns>
    <columns>Exchange_Rate__c</columns>
    <columns>PRICEFCY__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LocalCharge__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>